--- a/src/Lxna.Gui.Desktop/App.xaml
+++ b/src/Lxna.Gui.Desktop/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Styles>
-      <StyleInclude Source="resm:Avalonia.Themes.Default.DefaultTheme.xaml?assembly=Avalonia.Themes.Default"/>
-      <StyleInclude Source="resm:Omnix.Avalonia.Themes.DarkTheme.xaml?assembly=Omnix.Avalonia"/>
+        <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
+        <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseDark.xaml"/>
     </Application.Styles>
 </Application>
