--- a/src/Lxna.Gui.Desktop/Windows/Main/MainWindow.xaml
+++ b/src/Lxna.Gui.Desktop/Windows/Main/MainWindow.xaml
@@ -2,9 +2,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
         xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
-        xmlns:local="clr-namespace:Lxna.Gui.Desktop.Windows"
-        xmlns:lc="clr-namespace:Omnix.Avalonia.Controls;assembly=Omnix.Avalonia"
-        xmlns:lp="clr-namespace:Omnix.Avalonia.Presenters;assembly=Omnix.Avalonia"
+        xmlns:local="clr-namespace:Lxna.Gui.Desktop.Windows.Avalonia.Main"
+        xmlns:controls="clr-namespace:Lxna.Gui.Desktop.Base.Controls"
+        xmlns:presenters="clr-namespace:Lxna.Gui.Desktop.Base.Controls.Presenters"
         Title="Lxna.Gui.Desktop"
         Height="300"
         Width="500">
@@ -22,31 +22,34 @@
             </TreeView.ItemTemplate>
         </TreeView>
         <ListBox Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                 VirtualizationMode="Simple"
                  Items="{Binding CurrentFiles}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto">
             <ListBox.Template>
                 <ControlTemplate>
-                    <ScrollViewer VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-                        <lp:ItemsPresenter VirtualizationMode="Simple"
-                                           VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
-                                           Items="{Binding $parent[ListBox].Items}"
-                                           ItemsPanel="{Binding $parent[ListBox].ItemsPanel}"
-                                           ItemTemplate="{Binding $parent[ListBox].ItemTemplate}"
-                                           MemberSelector="{Binding $parent[ListBox].MemberSelector}"/>
+                    <ScrollViewer>
+                        <presenters:ItemsPresenter Items="{Binding $parent[ListBox].Items}"
+                                        ItemsPanel="{Binding $parent[ListBox].ItemsPanel}"
+                                        ItemTemplate="{Binding $parent[ListBox].ItemTemplate}"
+                                        Margin="{Binding $parent[ListBox].Padding}"
+                                        MemberSelector="{Binding $parent[ListBox].MemberSelector}"
+                                        VirtualizationMode="{Binding $parent[ListBox].VirtualizationMode}"/>
                     </ScrollViewer>
                 </ControlTemplate>
             </ListBox.Template>
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <lc:VirtualizingWrapPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
-                                              Height="{Binding $parent[ScrollViewer].Bounds.Height}"
-                                              Width="{Binding $parent[ScrollViewer].Bounds.Width}"
-                                              Orientation="Horizontal" Background="White" />
+                    <!--<controls:VirtualizingGridPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
+                               ItemWidth="256" ItemHeight="256"  Orientation="Horizontal" />-->
+                    <controls:VirtualizingWrapPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
+                                                    Height="{Binding $parent[ListBox].Bounds.Height}"
+                                                    Width="{Binding $parent[ListBox].Bounds.Width}"
+                                                    Orientation="Horizontal" />
                 </ItemsPanelTemplate>
             </ListBox.ItemsPanel>
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel Orientation="Vertical" Width="256" Height="256">
-                        <Image Source="{Binding Thumbnail}" />
+                    <StackPanel Orientation="Vertical" Width="256" Height="256" >
+                        <Image Source="{Binding Thumbnail}"/>
                         <TextBlock Text="{Binding Name.Value}" />
                     </StackPanel>
                 </DataTemplate>
