--- a/src/Omnius.Lxna.Ui.Desktop/App.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/App.axaml
@@ -1,12 +1,8 @@
-﻿<Application xmlns="https://github.com/avaloniaui"
+<Application xmlns="https://github.com/avaloniaui"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             xmlns:local="clr-namespace:Omnius.Lxna.Ui.Desktop"
             x:Class="Omnius.Lxna.Ui.Desktop.App"
             xmlns:sys="clr-namespace:System;assembly=mscorlib">
-    <Application.DataTemplates>
-        <local:ViewLocator/>
-    </Application.DataTemplates>
-
     <Application.Styles>
         <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
         <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseDark.xaml"/>
