--- a/src/Omnius.Lxna.Ui.Desktop/Views/SearchControl.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Views/SearchControl.axaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Omnius.Lxna.Ui.Desktop.Views.SearchControl"
+<UserControl x:Class="Omnius.Lxna.Ui.Desktop.Views.SearchControl"
         xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:dataGrid="clr-namespace:Avalonia.Controls;assembly=Avalonia.Controls.DataGrid"
@@ -14,31 +14,8 @@
         d:DesignHeight="450">
 
     <Design.DataContext>
-        <vm:MainWindowViewModel/>
+        <vm:SearchControlViewModel/>
     </Design.DataContext>
-
-    <Grid ColumnDefinitions="Auto,Auto,*">
-        <TreeView Name="TreeView" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"
-                Items="{Binding RootDirectories}" SelectedItem="{Binding SelectedDirectory.Value}" >
-            <TreeView.Styles>
-                <Style Selector="TreeViewItem">
-                    <Setter Property="IsExpanded" Value="{Binding IsExpanded.Value, Mode=TwoWay}"/>
-                </Style>
-            </TreeView.Styles>
-            <TreeView.ItemTemplate>
-                <TreeDataTemplate ItemsSource="{Binding Children}">
-                    <StackPanel Orientation="Horizontal">
-                        <Image Source="{Binding Icon}" />
-                        <TextBlock Text="{Binding Name.Value}" HorizontalAlignment="Center"/>
-                    </StackPanel>
-                </TreeDataTemplate>
-            </TreeView.ItemTemplate>
-        </TreeView>
-        <GridSplitter Grid.Column="1" />
-        <dataGrid:DataGrid Grid.Column="2">
-        </dataGrid:DataGrid>
-    </Grid>
 
     <Grid ColumnDefinitions="Auto,*">
         <TreeView Name="TreeView" Grid.Column="0" Width="200" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
