--- a/src/Omnius.Lxna.Ui.Desktop/Views/Windows/Main/FileView/FileViewControl.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Views/Windows/Main/FileView/FileViewControl.axaml
@@ -1,20 +1,22 @@
-<UserControl x:Class="Omnius.Lxna.Ui.Desktop.Views.SearchControl"
+<UserControl x:Class="Omnius.Lxna.Ui.Desktop.Windows.Views.Main.FileView.FileViewControl"
         xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
         xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
-        xmlns:vm="clr-namespace:Omnius.Lxna.Ui.Desktop.ViewModels;assembly=Omnius.Lxna.Ui.Desktop"
+        xmlns:vm="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Views.Main.FileView;assembly=Omnius.Lxna.Ui.Desktop"
+        x:CompileBindings="True"
+        x:DataType="vm:FileViewControlModel"
         Width="800"
         Height="500" >
 
     <Design.DataContext>
-        <vm:SearchControlViewModel/>
+        <vm:FileViewControlModel/>
     </Design.DataContext>
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="{Binding TreeViewWidth.Value}" />
-            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="{Binding TreeViewWidth.Value, Mode=TwoWay}" />
+            <ColumnDefinition Width="8" />
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <TreeView Name="TreeView" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
@@ -22,13 +24,12 @@
                 Items="{Binding RootDirectories}" SelectedItem="{Binding SelectedDirectory.Value}">
             <TreeView.Styles>
                 <Style Selector="TreeViewItem">
-                    <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
+                    <Setter Property="IsExpanded" Value="{ReflectionBinding IsExpanded, Mode=TwoWay}"/>
                 </Style>
             </TreeView.Styles>
             <TreeView.ItemTemplate>
                 <TreeDataTemplate ItemsSource="{Binding Children}">
                     <StackPanel Orientation="Horizontal">
-                        <Image Source="{Binding Icon}" />
                         <TextBlock Text="{Binding Name}" HorizontalAlignment="Center"/>
                     </StackPanel>
                 </TreeDataTemplate>
