--- a/src/Omnius.Lxna.Ui.Desktop/Views/Windows/Main/MainWindow.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Views/Windows/Main/MainWindow.axaml
@@ -1,18 +1,23 @@
-<Window x:Class="Omnius.Lxna.Ui.Desktop.Views.MainWindow"
+<Window x:Class="Omnius.Lxna.Ui.Desktop.Windows.Views.Main.MainWindow"
         Title="Omnius.Lxna.Ui.Desktop"
         Icon="/Assets/avalonia-logo.ico"
         xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
         xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
-        xmlns:v="clr-namespace:Omnius.Lxna.Ui.Desktop.Views;assembly=Omnius.Lxna.Ui.Desktop"
-        xmlns:vm="clr-namespace:Omnius.Lxna.Ui.Desktop.ViewModels;assembly=Omnius.Lxna.Ui.Desktop"
+        xmlns:mvm="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Views.Main;assembly=Omnius.Lxna.Ui.Desktop"
+        xmlns:fvm="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Views.Main.FileView;assembly=Omnius.Lxna.Ui.Desktop"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Width="800"
         Height="500"
-        FontFamily="Meiryo UI, Lucida Grande, Ubuntu" >
+        FontFamily="Meiryo UI, Lucida Grande, Ubuntu"
+        mc:Ignorable="d"
+        d:DesignWidth="800"
+        d:DesignHeight="450" >
 
     <Design.DataContext>
-        <vm:MainWindowViewModel/>
+        <mvm:MainWindowModel/>
     </Design.DataContext>
 
     <Grid ColumnDefinitions="Auto,*">
@@ -28,7 +33,7 @@
             <ListBoxItem />
         </ListBox>
         <Grid Grid.Column="1">
-            <v:SearchControl x:Name="SearchControl" Height="NaN" Width="NaN" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            <fvm:FileViewControl x:Name="FileViewControl" Height="NaN" Width="NaN" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Grid>
     </Grid>
 </Window>
