--- a/src/Omnius.Lxna.Ui.Desktop/Resources/Models/UiSettings.tt
+++ b/src/Omnius.Lxna.Ui.Desktop/Resources/Models/UiSettings.tt
@@ -40,10 +40,7 @@ namespace Omnius.Lxna.Ui.Desktop.Resources.Models
 
         public <#= type #> <#= name #>
         {
-            get
-            {
-                return <#= generatedFieldName #>;
-            }
+            get => <#= generatedFieldName #>;
             set
             {
                 if (<#= generatedFieldName #> != value)
