--- a/src/Omnius.Lxna.Ui.Desktop/Views/Windows/Main/FileView/FileViewControl.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Views/Windows/Main/FileView/FileViewControl.axaml
@@ -1,9 +1,9 @@
-<UserControl x:Class="Omnius.Lxna.Ui.Desktop.Windows.Views.Main.FileView.FileViewControl"
+<UserControl x:Class="Omnius.Lxna.Ui.Desktop.Views.Windows.Main.FileView.FileViewControl"
         xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
         xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
-        xmlns:vm="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Views.Main.FileView;assembly=Omnius.Lxna.Ui.Desktop"
+        xmlns:vm="clr-namespace:Omnius.Lxna.Ui.Desktop.Views.Windows.Main.FileView;assembly=Omnius.Lxna.Ui.Desktop"
         x:CompileBindings="True"
         x:DataType="vm:FileViewControlModel"
         Width="800"
