--- a/src/Omnius.Lxna.Ui.Desktop/Views/Windows/Main/MainWindow.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Views/Windows/Main/MainWindow.axaml
@@ -1,12 +1,11 @@
-<Window x:Class="Omnius.Lxna.Ui.Desktop.Windows.Views.Main.MainWindow"
+<Window x:Class="Omnius.Lxna.Ui.Desktop.Views.Windows.Main.MainWindow"
         Title="Omnius.Lxna.Ui.Desktop"
-        Icon="/Assets/avalonia-logo.ico"
         xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
         xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
-        xmlns:mvm="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Views.Main;assembly=Omnius.Lxna.Ui.Desktop"
-        xmlns:fvm="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Views.Main.FileView;assembly=Omnius.Lxna.Ui.Desktop"
+        xmlns:mvm="clr-namespace:Omnius.Lxna.Ui.Desktop.Views.Windows.Main;assembly=Omnius.Lxna.Ui.Desktop"
+        xmlns:fvm="clr-namespace:Omnius.Lxna.Ui.Desktop.Views.Windows.Main.FileView;assembly=Omnius.Lxna.Ui.Desktop"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Width="800"
