--- a/src/Omnius.Lxna.Ui.Desktop/Views/Windows/Main/Picture/PictureWindow.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Views/Windows/Main/Picture/PictureWindow.axaml
@@ -1,11 +1,11 @@
-<Window x:Class="Omnius.Lxna.Ui.Desktop.Windows.Views.Main.Picture.PictureWindow"
+<Window x:Class="Omnius.Lxna.Ui.Desktop.Views.Windows.Main.Picture.PictureWindow"
         Title="Omnius.Lxna.Ui.Desktop"
         Icon="/Assets/avalonia-logo.ico"
         xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
         xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
-        xmlns:vm="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Views.Main.Picture;assembly=Omnius.Lxna.Ui.Desktop"
+        xmlns:vm="clr-namespace:Omnius.Lxna.Ui.Desktop.Views.Windows.Main.Picture;assembly=Omnius.Lxna.Ui.Desktop"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         x:CompileBindings="True"
