--- a/src/Omnius.Lxna.Ui.Desktop/Windows/Main/FileView/FileViewControl.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Windows/Main/FileView/FileViewControl.axaml
@@ -1,13 +1,16 @@
-<UserControl x:Class="Omnius.Lxna.Ui.Desktop.Views.Windows.Main.FileView.FileViewControl"
+<UserControl x:Class="Omnius.Lxna.Ui.Desktop.Windows.Main.FileView.FileViewControl"
         xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
         xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
-        xmlns:vm="clr-namespace:Omnius.Lxna.Ui.Desktop.Views.Windows.Main.FileView;assembly=Omnius.Lxna.Ui.Desktop"
+        xmlns:vm="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Main.FileView;assembly=Omnius.Lxna.Ui.Desktop"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         x:CompileBindings="True"
-        x:DataType="vm:FileViewControlModel"
-        Width="800"
-        Height="500" >
+        x:DataType="vm:FileViewControlViewModel"
+        mc:Ignorable="d"
+        d:DesignWidth="800"
+        d:DesignHeight="450" >
 
     <Design.DataContext>
         <vm:FileViewControlModel/>
