--- a/src/Omnius.Lxna.Ui.Desktop/Windows/Main/MainWindow.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Windows/Main/MainWindow.axaml
@@ -1,11 +1,11 @@
-<Window x:Class="Omnius.Lxna.Ui.Desktop.Views.Windows.Main.MainWindow"
+<Window x:Class="Omnius.Lxna.Ui.Desktop.Windows.Main.MainWindow"
         Title="Omnius.Lxna.Ui.Desktop"
         xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
         xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
-        xmlns:mvm="clr-namespace:Omnius.Lxna.Ui.Desktop.Views.Windows.Main;assembly=Omnius.Lxna.Ui.Desktop"
-        xmlns:fvm="clr-namespace:Omnius.Lxna.Ui.Desktop.Views.Windows.Main.FileView;assembly=Omnius.Lxna.Ui.Desktop"
+        xmlns:local="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Main;assembly=Omnius.Lxna.Ui.Desktop"
+        xmlns:fileview="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Main.FileView;assembly=Omnius.Lxna.Ui.Desktop"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Width="800"
@@ -14,10 +14,6 @@
         mc:Ignorable="d"
         d:DesignWidth="800"
         d:DesignHeight="450" >
-
-    <Design.DataContext>
-        <mvm:MainWindowModel/>
-    </Design.DataContext>
 
     <Grid ColumnDefinitions="Auto,*">
         <ListBox Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
@@ -32,7 +28,7 @@
             <ListBoxItem />
         </ListBox>
         <Grid Grid.Column="1">
-            <fvm:FileViewControl x:Name="FileViewControl" Height="NaN" Width="NaN" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            <fileview:FileViewControl DataContext="{Binding FileViewControlViewModel}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Grid>
     </Grid>
 </Window>
