--- a/src/Omnius.Lxna.Ui.Desktop/Windows/PicturePreview/PicturePreviewWindow.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Windows/PicturePreview/PicturePreviewWindow.axaml
@@ -1,25 +1,20 @@
-<Window x:Class="Omnius.Lxna.Ui.Desktop.Views.Windows.Main.Picture.PictureWindow"
+<Window x:Class="Omnius.Lxna.Ui.Desktop.Windows.PicturePreview.PicturePreviewWindow"
         Title="Omnius.Lxna.Ui.Desktop"
-        Icon="/Assets/avalonia-logo.ico"
         xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
         xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
-        xmlns:vm="clr-namespace:Omnius.Lxna.Ui.Desktop.Views.Windows.Main.Picture;assembly=Omnius.Lxna.Ui.Desktop"
+        xmlns:vm="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.PicturePreview;assembly=Omnius.Lxna.Ui.Desktop"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         x:CompileBindings="True"
-        x:DataType="vm:PictureWindowModel"
+        x:DataType="vm:PicturePreviewWindowViewModel"
         Width="800"
         Height="500"
         FontFamily="Meiryo UI, Lucida Grande, Ubuntu"
         mc:Ignorable="d"
         d:DesignWidth="800"
         d:DesignHeight="450" >
-
-    <Design.DataContext>
-        <vm:PictureWindowModel/>
-    </Design.DataContext>
 
     <Grid>
         <Image Source="{Binding Source.Value}" />
