--- a/src/Omnius.Lxna.Ui.Desktop/Windows/Main/Controls/FileView/FileViewControl.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Windows/Main/Controls/FileView/FileViewControl.axaml
@@ -6,49 +6,54 @@
         xmlns:local="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Main;assembly=Omnius.Lxna.Ui.Desktop"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:progRing="clr-namespace:AvaloniaProgressRing;assembly=AvaloniaProgressRing"
         x:CompileBindings="True"
         x:DataType="local:FileViewControlViewModelBase"
         mc:Ignorable="d"
         d:DesignWidth="800"
         d:DesignHeight="450" >
-
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="{Binding TreeViewWidth.Value, Mode=TwoWay}" />
-            <ColumnDefinition Width="8" />
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <TreeView Name="TreeView" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"
-                Items="{Binding RootDirectories}" SelectedItem="{Binding SelectedDirectory.Value}">
-            <TreeView.Styles>
-                <Style Selector="TreeViewItem">
-                    <Setter Property="IsExpanded" Value="{ReflectionBinding IsExpanded, Mode=TwoWay}"/>
-                </Style>
-            </TreeView.Styles>
-            <TreeView.ItemTemplate>
-                <TreeDataTemplate ItemsSource="{Binding Children}">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Name}" HorizontalAlignment="Center"/>
-                    </StackPanel>
-                </TreeDataTemplate>
-            </TreeView.ItemTemplate>
-        </TreeView>
-        <GridSplitter Grid.Column="1" />
-        <ScrollViewer Grid.Column="2" HorizontalScrollBarVisibility="Disabled" >
-            <ItemsRepeater x:Name="ItemsRepeater" HorizontalAlignment="Stretch" Items="{Binding CurrentItems}">
-                <ItemsRepeater.Layout>
-                    <UniformGridLayout MinItemWidth="256" MinItemHeight="256" MinColumnSpacing="2" MinRowSpacing="2"/>
-                </ItemsRepeater.Layout>
-                <ItemsRepeater.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Width="256" Height="256" RowDefinitions="*,Auto">
-                            <Image Grid.Row="0" Source="{Binding Thumbnail}" />
-                            <TextBlock Grid.Row="1" Text="{Binding Name}" TextWrapping="Wrap" />
-                        </Grid>
-                    </DataTemplate>
-                </ItemsRepeater.ItemTemplate>
-            </ItemsRepeater>
-        </ScrollViewer>
-    </Grid>
+    <Panel>
+        <progRing:ProgressRing IsActive="True" Width="200" Height="200" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Gray" />
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="{Binding TreeViewWidth.Value, Mode=TwoWay}" />
+                <ColumnDefinition Width="8" />
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TreeView Name="TreeView" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+                    ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"
+                    Items="{Binding RootDirectories}" SelectedItem="{Binding SelectedDirectory.Value}">
+                <TreeView.Styles>
+                    <Style Selector="TreeViewItem">
+                        <Setter Property="IsExpanded" Value="{ReflectionBinding IsExpanded, Mode=TwoWay}"/>
+                    </Style>
+                </TreeView.Styles>
+                <TreeView.ItemTemplate>
+                    <TreeDataTemplate ItemsSource="{Binding Children}">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Name}" HorizontalAlignment="Center"/>
+                        </StackPanel>
+                    </TreeDataTemplate>
+                </TreeView.ItemTemplate>
+            </TreeView>
+            <GridSplitter Grid.Column="1" />
+            <ScrollViewer Grid.Column="2" x:Name="ScrollViewer" HorizontalScrollBarVisibility="Disabled">
+                <ItemsRepeater x:Name="ItemsRepeater" HorizontalAlignment="Stretch" Items="{ReflectionBinding CurrentItems}">
+                    <ItemsRepeater.Layout>
+                        <UniformGridLayout MinItemHeight="256" MinItemWidth="256" MinColumnSpacing="2" MinRowSpacing="2"/>
+                    </ItemsRepeater.Layout>
+                    <ItemsRepeater.ItemTemplate>
+                        <DataTemplate>
+                            <Border BorderThickness="1" BorderBrush="Gray">
+                                <DockPanel>
+                                    <TextBlock DockPanel.Dock="Bottom" Grid.Row="1" Text="{ReflectionBinding Name}" TextWrapping="NoWrap" Margin="8" HorizontalAlignment="Center" />
+                                    <Image Grid.Row="0" Source="{ReflectionBinding Image}" MaxWidth="256" MaxHeight="256" />
+                                </DockPanel>
+                            </Border>
+                        </DataTemplate>
+                    </ItemsRepeater.ItemTemplate>
+                </ItemsRepeater>
+            </ScrollViewer>
+        </Grid>
+    </Panel>
 </UserControl>
