--- a/src/Omnius.Lxna.Ui.Desktop/Windows/Main/Views/FileExplorer/FileExplorerView.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Windows/Main/Views/FileExplorer/FileExplorerView.axaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="Omnius.Lxna.Ui.Desktop.Windows.Main.FileViewControl"
+<UserControl x:Class="Omnius.Lxna.Ui.Desktop.Windows.Main.FileExplorerView"
         xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
@@ -8,13 +8,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:progRing="clr-namespace:AvaloniaProgressRing;assembly=AvaloniaProgressRing"
         x:CompileBindings="True"
-        x:DataType="local:FileViewControlViewModelBase"
+        x:DataType="local:FileExplorerViewModelBase"
         mc:Ignorable="d"
         d:DesignWidth="800"
         d:DesignHeight="450" >
     <Panel>
-        <progRing:ProgressRing IsActive="True" Width="200" Height="200" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Gray" />
-        <Grid>
+        <Panel ZIndex="1" IsEnabled="{Binding IsWaiting.Value}" IsVisible="{Binding IsWaiting.Value}">
+            <DockPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                <progRing:ProgressRing DockPanel.Dock="Top" IsActive="{Binding IsWaiting.Value}" Width="200" Height="200" Foreground="Gray" />
+                <Button DockPanel.Dock="Bottom" Content="Cancel" Command="{Binding CancelWait}" />
+            </DockPanel>
+        </Panel>
+        <Grid ZIndex="0" IsEnabled="{Binding !IsWaiting.Value}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="{Binding TreeViewWidth.Value, Mode=TwoWay}" />
                 <ColumnDefinition Width="8" />
