--- a/src/Omnius.Lxna.Ui.Desktop/Windows/Main/Views/FileExplorer/FileExplorerView.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Windows/Main/Views/FileExplorer/FileExplorerView.axaml
@@ -16,7 +16,7 @@
         <Panel ZIndex="1" IsEnabled="{Binding IsWaiting.Value}" IsVisible="{Binding IsWaiting.Value}">
             <DockPanel HorizontalAlignment="Center" VerticalAlignment="Center">
                 <progRing:ProgressRing DockPanel.Dock="Top" IsActive="{Binding IsWaiting.Value}" Width="200" Height="200" Foreground="Gray" />
-                <Button DockPanel.Dock="Bottom" Content="Cancel" Command="{Binding CancelWait}" />
+                <Button DockPanel.Dock="Bottom" Content="Cancel" Command="{Binding CancelWaitCommand}" />
             </DockPanel>
         </Panel>
         <Grid ZIndex="0" IsEnabled="{Binding !IsWaiting.Value}">
@@ -27,23 +27,23 @@
             </Grid.ColumnDefinitions>
             <TreeView Name="TreeView" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                     ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"
-                    Items="{Binding RootDirectories}" SelectedItem="{Binding SelectedDirectory.Value}">
+                    Items="{Binding RootTreeViewModels}" SelectedItem="{Binding SelectedTreeViewModel.Value}">
                 <TreeView.Styles>
                     <Style Selector="TreeViewItem">
                         <Setter Property="IsExpanded" Value="{ReflectionBinding IsExpanded, Mode=TwoWay}"/>
                     </Style>
                 </TreeView.Styles>
                 <TreeView.ItemTemplate>
-                    <TreeDataTemplate ItemsSource="{Binding Children}">
+                    <TreeDataTemplate ItemsSource="{ReflectionBinding Children}">
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{Binding Name}" HorizontalAlignment="Center"/>
+                            <TextBlock Text="{ReflectionBinding Name}" HorizontalAlignment="Center"/>
                         </StackPanel>
                     </TreeDataTemplate>
                 </TreeView.ItemTemplate>
             </TreeView>
             <GridSplitter Grid.Column="1" />
             <ScrollViewer Grid.Column="2" x:Name="ScrollViewer" HorizontalScrollBarVisibility="Disabled">
-                <ItemsRepeater x:Name="ItemsRepeater" HorizontalAlignment="Stretch" Items="{ReflectionBinding CurrentItems}">
+                <ItemsRepeater x:Name="ItemsRepeater" HorizontalAlignment="Stretch" Items="{ReflectionBinding Thumbnails}">
                     <ItemsRepeater.Layout>
                         <UniformGridLayout MinItemHeight="256" MinItemWidth="256" MinColumnSpacing="2" MinRowSpacing="2"/>
                     </ItemsRepeater.Layout>
