--- a/src/Omnius.Lxna.Ui.Desktop/Styles/SideBar.xaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Styles/SideBar.xaml
@@ -4,49 +4,30 @@
     xmlns:skp="clr-namespace:Avalonia.Svg.Skia;assembly=Avalonia.Svg.Skia">
     <Design.PreviewWith>
         <Border>
-            <DockPanel>
-                <ListBox Classes="sidebar" x:Name="TabListBox" DockPanel.Dock="Top">
-                    <ListBoxItem Name="StatusListBoxItem" IsSelected="true">
-                        <Panel>
-                            <skp:Svg Path="/Assets/status.svg" />
-                        </Panel>
-                    </ListBoxItem>
-                    <ListBoxItem Name="PeersListBoxItem">
-                        <Panel>
-                            <skp:Svg Path="/Assets/peers.svg" />
-                        </Panel>
-                    </ListBoxItem>
-                    <ListBoxItem Name="ChatListBoxItem">
-                        <Panel>
-                            <skp:Svg Path="/Assets/chat.svg" />
-                        </Panel>
-                    </ListBoxItem>
-                    <ListBoxItem Name="SearchListBoxItem">
-                        <Panel>
-                            <skp:Svg Path="/Assets/search.svg" />
-                        </Panel>
-                    </ListBoxItem>
-                    <ListBoxItem Name="DownloadListBoxItem">
-                        <Panel>
-                            <skp:Svg Path="/Assets/download.svg" />
-                        </Panel>
-                    </ListBoxItem>
-                    <ListBoxItem Name="UploadListBoxItem">
-                        <Panel>
-                            <skp:Svg Path="/Assets/upload.svg" />
-                        </Panel>
+            <DockPanel Classes="Sidebar">
+                <ListBox x:Name="TabListBox" DockPanel.Dock="Top">
+                    <ListBoxItem Name="ExplorerListBoxItem" IsSelected="true">
+                        <StackPanel>
+                            <Panel>
+                                <skp:Svg Path="/Assets/explorer.svg" />
+                            </Panel>
+                            <TextBlock Text="Explorer" />
+                        </StackPanel>
                     </ListBoxItem>
                 </ListBox>
-                <Button Classes="sidebar" VerticalAlignment="Bottom" Command="{Binding SettingsCommand}" Padding="4">
-                    <Panel>
-                        <skp:Svg Path="/Assets/settings.svg" />
-                    </Panel>
+                <Button Classes="Flat Accent">
+                    <StackPanel>
+                        <Panel>
+                            <skp:Svg Path="/Assets/settings.svg" />
+                        </Panel>
+                        <TextBlock Text="Settings" />
+                    </StackPanel>
                 </Button>
             </DockPanel>
         </Border>
     </Design.PreviewWith>
 
-    <Style Selector="ListBox.sidebar">
+    <Style Selector="DockPanel.Sidebar > ListBox">
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="Background" Value="{x:Null}" />
         <Setter Property="Margin" Value="0" />
@@ -54,24 +35,33 @@
         <Setter Property="(ScrollViewer.HorizontalScrollBarVisibility)" Value="Hidden" />
         <Setter Property="(ScrollViewer.VerticalScrollBarVisibility)" Value="Hidden" />
     </Style>
-    <Style Selector="ListBox.sidebar > ListBoxItem">
+    <Style Selector="DockPanel.Sidebar > ListBox > ListBoxItem">
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
-        <Setter Property="Height" Value="64" />
-        <Setter Property="Width" Value="64" />
+        <Setter Property="Height" Value="70" />
+        <Setter Property="Width" Value="80" />
     </Style>
-    <Style Selector="ListBox.sidebar > ListBoxItem > Panel">
+    <Style Selector="DockPanel.Sidebar > ListBox > ListBoxItem > StackPanel > Panel">
         <Setter Property="Margin" Value="4" />
-        <Setter Property="Height" Value="36" />
-        <Setter Property="Width" Value="36" />
+        <Setter Property="Height" Value="32" />
+        <Setter Property="Width" Value="32" />
     </Style>
-    <Style Selector="Button.sidebar">
-        <Setter Property="Height" Value="64" />
-        <Setter Property="Width" Value="64" />
+    <Style Selector="DockPanel.Sidebar > ListBox > ListBoxItem > StackPanel > TextBlock">
+        <Setter Property="HorizontalAlignment" Value="Center" />
     </Style>
-    <Style Selector="Button.sidebar >  Panel">
+    <Style Selector="DockPanel.Sidebar > Button">
+        <Setter Property="Height" Value="70" />
+        <Setter Property="Width" Value="80" />
+        <Setter Property="Margin" Value="0" />
+        <Setter Property="Padding" Value="0" />
+    </Style>
+    <Style Selector="DockPanel.Sidebar > Button > StackPanel > Panel">
         <Setter Property="Margin" Value="4" />
-        <Setter Property="Height" Value="36" />
-        <Setter Property="Width" Value="36" />
+        <Setter Property="Height" Value="32" />
+        <Setter Property="Width" Value="32" />
     </Style>
+    <Style Selector="DockPanel.Sidebar > StackPanel > TextBlock">
+        <Setter Property="HorizontalAlignment" Value="Center" />
+    </Style>
+
 </Styles>
