--- a/src/Omnius.Lxna.Ui.Desktop/Windows/Main/MainWindow.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Windows/Main/MainWindow.axaml
@@ -1,13 +1,16 @@
-<Window x:Class="Omnius.Lxna.Ui.Desktop.Windows.Main.MainWindow"
+<Window
+    x:Class="Omnius.Lxna.Ui.Desktop.Windows.Main.MainWindow"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
     xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
-    xmlns:local="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Main;assembly=Omnius.Lxna.Ui.Desktop"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Main"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:skp="clr-namespace:Avalonia.Svg.Skia;assembly=Avalonia.Svg.Skia"
     Title="Lxna"
+    d:DesignHeight="600"
+    d:DesignWidth="800"
     x:CompileBindings="True"
     x:DataType="local:MainWindowModelBase"
     Background="{x:Null}"
@@ -18,6 +21,10 @@
     TransparencyLevelHint="AcrylicBlur"
     mc:Ignorable="d">
 
+    <Design.DataContext>
+        <local:MainWindowDesignModel />
+    </Design.DataContext>
+
     <Panel Margin="{Binding $parent[Window].OffScreenMargin}">
         <ExperimentalAcrylicBorder IsHitTestVisible="False">
             <ExperimentalAcrylicBorder.Material>
@@ -25,28 +32,36 @@
             </ExperimentalAcrylicBorder.Material>
         </ExperimentalAcrylicBorder>
         <DockPanel>
-            <StackPanel Height="30" DockPanel.Dock="Top" HorizontalAlignment="Left" VerticalAlignment="Stretch"
-                Orientation="Horizontal" IsHitTestVisible="False" Background="{x:Null}">
-                <skp:Svg Path="/Assets/lxna.svg" Margin="4" Width="16" VerticalAlignment="Center"/>
-                <TextBlock Text="{Binding $parent[Window].Title}" VerticalAlignment="Center" FontSize="16"/>
+            <StackPanel Height="32" DockPanel.Dock="Top" HorizontalAlignment="Left" VerticalAlignment="Stretch"
+                    Orientation="Horizontal" IsHitTestVisible="False" Background="{x:Null}">
+                <skp:Svg Path="/Assets/lxna.svg" Margin="8,4" Width="14" VerticalAlignment="Center"/>
+                <TextBlock Text="{Binding $parent[Window].Title}" VerticalAlignment="Center" FontSize="14"/>
             </StackPanel>
 
-            <Grid ColumnDefinitions="Auto,*">
-                <ListBox Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
-                    <ListBox.Styles>
-                        <Style Selector="ListBoxItem">
-                            <Setter Property="Height" Value="32" />
-                            <Setter Property="Width" Value="32" />
-                            <Setter Property="FontSize" Value="32"/>
-                            <Setter Property="FontWeight" Value="Bold"/>
-                        </Style>
-                    </ListBox.Styles>
-                    <ListBoxItem />
+            <DockPanel Classes="Sidebar">
+                <ListBox x:Name="TabListBox" DockPanel.Dock="Top">
+                    <ListBoxItem Name="ExplorerListBoxItem" IsSelected="true">
+                        <StackPanel>
+                            <Panel>
+                                <skp:Svg Path="/Assets/explorer.svg" />
+                            </Panel>
+                            <TextBlock Text="Explorer" />
+                        </StackPanel>
+                    </ListBoxItem>
                 </ListBox>
-                <Grid Grid.Column="1">
-                    <local:FileExplorerView DataContext="{Binding FileExplorerViewModel}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-                </Grid>
-            </Grid>
+                <Button Classes="Flat Accent" VerticalAlignment="Bottom" Command="{Binding SettingsCommand}">
+                    <StackPanel>
+                        <Panel>
+                            <skp:Svg Path="/Assets/settings.svg" />
+                        </Panel>
+                        <TextBlock Text="Settings" />
+                    </StackPanel>
+                </Button>
+            </DockPanel>
+
+            <Panel DockPanel.Dock="Right">
+                <local:ExplorerView DataContext="{Binding ExplorerViewModel}" IsVisible="{Binding #ExplorerListBoxItem.IsSelected}" />
+            </Panel>
         </DockPanel>
     </Panel>
 </Window>
