--- a/src/Omnius.Lxna.Ui.Desktop/Styles/Base.xaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Styles/Base.xaml
@@ -6,7 +6,6 @@
         <StackPanel Orientation="Vertical" MinWidth="500">
             <StackPanel.Styles>
                 <Style Selector="Label.separator" >
-                    <Setter Property="Background" Value="Black" />
                     <Setter Property="Height" Value="32" />
                     <Setter Property="VerticalContentAlignment" Value="Center" />
                     <Setter Property="HorizontalContentAlignment" Value="Center" />
@@ -48,12 +47,12 @@
                         Binding="{ReflectionBinding}"
                         Width="Auto" />
                 </DataGrid.Columns>
-                <DataGrid.Items>
+                <DataGrid.ItemsSource>
                     <scg:ArrayList>
                         <sys:String>foo</sys:String>
                         <sys:String>bar</sys:String>
                     </scg:ArrayList>
-                </DataGrid.Items>
+                </DataGrid.ItemsSource>
             </DataGrid>
 
             <Label Classes="separator" Content="TreeView" />
@@ -85,9 +84,11 @@
         <Setter Property="VerticalContentAlignment" Value="Center" />
     </Style>
 
-    <Style Selector="CheckBox">
+    <Style Selector="CheckBox" >
         <Setter Property="FontSize" Value="16" />
         <Setter Property="Height" Value="36" />
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Stretch" />
         <Setter Property="ContentTemplate">
             <Setter.Value>
                 <DataTemplate>
