--- a/src/Omnius.Lxna.Ui.Desktop/Windows/Main/MainWindow.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Windows/Main/MainWindow.axaml
@@ -32,7 +32,7 @@
                     </StackPanel>
                 </ListBoxItem>
             </ListBox>
-            <Button Classes="Flat Accent" VerticalAlignment="Bottom" Command="{Binding SettingsCommand}">
+            <Button VerticalAlignment="Bottom" Command="{Binding SettingsCommand}">
                 <StackPanel>
                     <Panel>
                         <skp:Svg Path="/Assets/settings.svg" />
