--- a/src/Omnius.Lxna.Ui.Desktop/Windows/Main/Views/Explorer/ExplorerView.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Windows/Main/Views/Explorer/ExplorerView.axaml
@@ -3,9 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
         xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
+        xmlns:ir="clr-namespace:Avalonia.Controls;assembly=Avalonia.Controls.ItemsRepeater"
+        xmlns:pr="clr-namespace:FluentAvalonia.UI.Controls;assembly=FluentAvalonia.ProgressRing"
         xmlns:local="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Main;assembly=Omnius.Lxna.Ui.Desktop"
         xmlns:c="clr-namespace:Omnius.Core.Avalonia.Converters;assembly=Omnius.Core.Avalonia"
-        xmlns:ir="clr-namespace:Avalonia.Controls;assembly=Avalonia.Controls.ItemsRepeater"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         x:CompileBindings="True"
@@ -20,6 +21,7 @@
     <Panel>
         <Panel ZIndex="1" IsEnabled="{Binding IsWaiting.Value}" IsVisible="{Binding IsWaiting.Value}">
             <DockPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                <pr:ProgressRing DockPanel.Dock="Top" IsIndeterminate="True" BorderThickness="10" Width="100" Height="100" />
                 <Button DockPanel.Dock="Bottom" Content="Cancel" Command="{Binding CancelWaitCommand}" />
             </DockPanel>
         </Panel>
